<resources>
    <string name="app_name">CalculatorAppP1</string>
    <string name="c">C</string>
    <string name="negPos">+/-</string>
    <string name="modulus">%</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zeroCalc">0</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log10">log10</string>
    <string name="ln">ln</string>
</resources>